--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
   <!-- Footer -->
    <footer class="text-center">
 
-     <a href="https://iobm.edu.pk/" style="color: white"><p>&copy Designed &amp Developed by Usman Ali</p></a>
+     <a href="https://github.com/usmanialiq" style="color: white"><p>&copy Designed &amp Developed by Usman Ali</p></a>
 
    </footer>
 
